add pop-up window

--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,79 @@ body {
     background-color: #508abb;
   }
 }
+
+/** modal window **/
+
+.modal-window {
+  position: absolute;
+  margin: 30px auto;
+  width: 600px;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+  outline: none;
+  align-self: baseline;
+  transition: all 0.3s ease-in-out;
+  z-index: 10;
+}
+.modal-window * {
+  font-family: sans-serif;
+}
+.modal-window h2 {
+  color: #333333;
+  font-size: 1.5rem;
+  padding: 15px;
+  text-align: center;
+}
+.modal-window hr {
+  border: 0;
+  border-top: 1px solid #eee;
+}
+
+.modal-window .modal-body {
+  color: #333333;
+  padding: 15px;
+  text-align: center;
+  line-height: 2;
+}
+.modal-window .modal-body h1 {
+  font-size: 0.875rem;
+}
+.modal-window .btnX {
+  margin-right: 10px;
+}
+.modal-window .btnO {
+  margin-left: 10px;
+}
+.modal-window .btns button {
+  font-family: 'Yesteryear', cursive;
+  color: #333333;
+  background-color: #fff;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+
+.modal-window .btns button:hover {
+  background-color: #e6e6e6;
+  border-color: #adadad;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: 0.5;
+  z-index: 0;
+}
+.hidden {
+  display: none;
+}
+
 @media only screen and (max-width: 520px) {
   .game-container {
     width: 90%;
