--- a/styles.css
+++ b/styles.css
@@ -147,9 +147,19 @@ body {
   display: none;
 }
 
+@media only screen and (max-width: 768px) {
+  .modal-window {
+    width: auto;
+  }
+}
+
 @media only screen and (max-width: 520px) {
   .game-container {
-    width: 90%;
+    width: 100%;
     height: 60%;
+  }
+
+  body {
+    padding-inline: 20px;
   }
 }
